# olcli

./: .gitignore  README.md  install.sh  pyproject.toml
olcli/: README.md  __init__.py  cli.py  client.py  config.py  repl.py  updater.py
olcli/agents/: memory.py  orchestrator.py  planning.py
olcli/commands/: registry.py
olcli/examples/agents/: data-analyst.md  security-auditor.md
olcli/olcli/commands/: registry.py
olcli/tests/: test_core.py
olcli/tools/: __init__.py  batch_ops.py  builtins.py  code_analysis.py  enhanced_registry.py  git_tools.py  scaffolding.py  workflows.py
olcli/ui/: terminal.py
