[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olcli"
version = "1.0.0"
description = "Claude Code-style AI assistant CLI for Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.0",
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
olcli = "olcli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["olcli*"]
